compiler/crates/syntax/grammar/grammar.js
        source_file: ($) => $._statements,

        _statements: ($) => lines($, field("statement", $._statement)),

        type_definition_statement: ($) =>
            prec(
                1,
                seq(
                    field("comment", repeat($.comment)),
                    field("attribute", repeat($._attribute)),
                    field("name", $.type_name),
                    $._colon_operator,
                    optional($._type_function),
                    "type",
                    optional(seq("{", field("representation", $._type_representation), "}"))
                )
            ),

        _type_representation: ($) =>
            choice($.structure_type_representation, $.enumeration_type_representation),

        structure_type_representation: ($) => lines($, field("field", $.field_definition)),

        field_definition: ($) =>
            seq(field("name", $.variable_name), $._annotate_operator, $._type_annotation),

        enumeration_type_representation: ($) => lines($, field("variant", $.variant_definition)),

        variant_definition: ($) =>
            seq(field("name", $.variant_name), repeat(field("element", $._subtype))),

        trait_definition_statement: ($) =>
            prec(
                1,
                seq(
                    field("comment", repeat($.comment)),
                    field("attribute", repeat($._attribute)),
                    field("name", $.type_name),
                    $._colon_operator,
                    optional($._type_function),
                    "trait",
                    optional(seq(field("type", $._subtype), optional($._where_clause)))
                )
            ),

        constant_definition_statement: ($) =>
            prec(
                1,
                seq(
                    field("comment", repeat($.comment)),
                    field("attribute", repeat($._attribute)),
                    field("name", $.variable_name),
                    $._annotate_operator,
                    $._type_annotation
                )
            ),

        instance_definition_statement: ($) =>
            prec(
                1,
                seq(
                    field("comment", repeat($.comment)),
                    field("attribute", repeat($._attribute)),
                    "instance",
                    "(",
                    field("trait", $.type_name),
                    field("parameter", repeat1($._subtype)),
                    ")",
                    optional($._where_clause),
                    optional(seq($._colon_operator, field("value", $._expression)))
                )
            ),

        assignment_statement: ($) =>
            seq(field("pattern", $._pattern), $._colon_operator, field("value", $._expression)),

        expression_statement: ($) => field("expression", $._expression),

        // Expressions

        _expression: ($) =>
            choice($._expression_element, $.tuple_expression, $.collection_expression),

        _expression_element: ($) =>
            choice(
                $._subexpression,
                $.formatted_text_expression,
                $.call_expression,
                $.do_expression,
                $.when_expression,
                $.intrinsic_expression,
                ...binary_operators.map(([key]) => $[`${key}_expression`]),
                $.function_expression
            ),

        _subexpression: ($) =>
            choice(
                $.placeholder_expression,
                $.name_expression,
                $.number_expression,
                $.text_expression,
                $.structure_expression,
                $.block_expression,
                $.unit_expression,
                $._parenthesized_expression
            ),

        name_expression: ($) => field("variable", $.variable_name),

        number_expression: ($) => field("value", $.number),

        text_expression: ($) => field("value", $.text),

        structure_expression: ($) =>
            seq("{", lines($, field("field", $.structure_expression_field)), "}"),

        structure_expression_field: ($) =>
            prec(
                2,
                seq(
                    field("name", $.variable_name),
                    $._colon_operator,
                    field("value", $._expression)
                )
            ),

        block_expression: ($) => prec(1, seq("{", optional($._statements), "}")),

        unit_expression: ($) => seq("(", ")"),

        formatted_text_expression: ($) =>
            prec(1, seq(field("text", $.text), field("input", repeat1($._subexpression)))),

        call_expression: ($) =>
            seq(field("function", $._subexpression), field("input", repeat1($._subexpression))),

        do_expression: ($) => prec(50, seq("do", field("input", $._subexpression))),

        when_expression: ($) =>
            prec(
                50,
                seq("when", field("input", $._subexpression), seq("{", optional($._arms), "}"))
            ),

        _arms: ($) => lines($, field("arm", $.arm)),

        arm: ($) =>
            seq(field("pattern", $._pattern), $._arrow_operator, field("value", $._expression)),

        intrinsic_expression: ($) =>
            seq("intrinsic", field("name", $.text), field("input", repeat($._subexpression))),

        ...Object.fromEntries(
            binary_operators.map(
                ([
                    key,
                    precedence,
                    associativity,
                    {
                        left = ($) => $._expression_element,
                        right = ($) => $._expression_element,
                    } = {},
                ]) => [
                    `${key}_expression`,
                    ($) =>
                        prec[associativity](
                            precedence,
                            seq(
                                field("left", left($)),
                                field("operator", $[`_${key}_operator`]),
                                field("right", right($))
                            )
                        ),
                ]
            )
        ),

        collection_expression: ($) => variadic($, $._comma_operator, $._expression_element),

        function_expression: ($) =>
            prec.right(
                0,
                seq(
                    repeat1(field("input", $._subpattern)),
                    $._arrow_operator,
                    field("output", $._expression_element)
                )
            ),

        // Patterns

        _pattern: ($) => choice($._pattern_element, $.tuple_pattern),

        _pattern_element: ($) =>
            choice($._subpattern, $.set_pattern, $.variant_pattern, $.or_pattern),

        _subpattern: ($) =>
            choice(
                $.wildcard_pattern,
                $.variable_pattern,
                $.number_pattern,
                $.text_pattern,
                $.destructure_pattern,
                $.unit_pattern,
                $._parenthesized_pattern
            ),

        wildcard_pattern: ($) => "_",

        variable_pattern: ($) => field("variable", $.variable_name),

        number_pattern: ($) => field("value", $.number),

        destructure_pattern: ($) =>
            seq("{", lines($, field("field", $.destructure_pattern_field)), "}"),

        destructure_pattern_field: ($) =>
            seq(field("name", $.variable_name), $._colon_operator, field("value", $._pattern)),

        or_pattern: ($) =>
            prec.left(
                0,
                seq(
                    field("left", $._pattern_element),
                    $._or_operator,
                    field("right", $._pattern_element)
                )
            ),

        set_pattern: ($) => seq("set", field("variable", $.variable_name)),

        variant_pattern: ($) =>
            seq(field("variant", $.variant_name), field("element", repeat($._subpattern))),

        // Types

        _type_element: ($) =>
            choice($._subtype, alias($._parameterized_type, $.named_type), $.function_type),

        _subtype: ($) =>
            choice(
                $.placeholder_type,
                $.parameter_type,
                $.named_type,
                $.block_type,
                $.unit_type,
                $._parenthesized_type
            ),

        placeholder_type: ($) => "_",

        parameter_type: ($) => field("name", $.type_parameter_name),

        named_type: ($) => field("name", $.type_name),

        function_type: ($) =>
            prec.right(
                0,
                seq(
                    field("input", repeat1($._subtype)),
                    $._arrow_operator,
                    field("output", $._type_element)
                )
            ),

        block_type: ($) =>
            seq(
                "{",
                seq(
                    optional($._line_break),
                    field("output", $._type_element),
                    optional($._line_break)
                ),
                "}"
            ),

        unit_type: ($) => seq("(", ")"),

        _type_annotation: ($) => seq(field("type", $._type_element), optional($._where_clause)),

        _type_function: ($) =>
            seq(repeat1(field("parameter", $.parameter_type)), $._type_arrow_operator),

        _where_clause: ($) => seq("where", repeat1($._constraint)),

        bound_constraint: ($) =>
            seq(field("trait", $.type_name), field("parameter", repeat1($._subtype))),

        infer_constraint: ($) => seq("infer", field("parameter", $.type_parameter_name)),

        default_constraint: ($) =>
            seq(
                field("parameter", $.type_parameter_name),
                $._colon_operator,
                field("value", $._type_element)
            ),

        // Attributes

        _attribute: ($) => seq("[", choice($.name_attribute, $.assign_attribute), "]"),

        _line_break: ($) => /\n+/,
        comment: ($) => /--.*\n+/,
        text: ($) => /"[^"]*"/,
        number: ($) => /[+\-]?\d+(?:\.\d+)?/,
        _capital_name: ($) => /(?:\d-)*[A-Z]\w*(?:\-\w+)*[!?]?/,
        _lowercase_name: ($) => /\w+(?:\-\w+)*[!?]?/,

        type_name: ($) => $._capital_name,
        variant_name: ($) => $._capital_name,
        variable_name: ($) => $._lowercase_name,
        type_parameter_name: ($) => $._lowercase_name,
        _colon_operator: ($) => operator($, ":"),
        _annotate_operator: ($) => operator($, "::"),
        _or_operator: ($) => operator($, "or"),
        _comma_operator: ($) => operator($, ",", { next_line: false }),
        _arrow_operator: ($) => operator($, "->"),
    },
